# figshare_api_upload

./: README.md  pyproject.toml
figshare_api_upload/: example_from_docs.py  upload.py
tests/: test_figshare_api_upload.py
